--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=7122821609:AAEbrDJOvZoAfVRNZNX26YJSqxLqGxDj-i0
 PIXABAY_API_KEY=19293305-dcbdabe290bd37287df801a0f
-DB_PATH=user.db
+DATABASE_URL=postgresql://postgres:ElHZldBLlbjkBLsdKjIIvsGGhcMRbYSA@postgres.railway.internal:5432/railway
